--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@drawable/lamp"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".SplashActivity"
+        <activity
+            android:name=".SplashActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,8 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" android:label="Room Categories"/>
-        <activity android:name=".WelcomeActivity"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="Room Categories" />
+        <activity android:name=".WelcomeActivity" />
+        <activity android:name=".Information"></activity>
     </application>
 
 </manifest>
